src/objects/Gumutindo_Quarterly_Targets__c.object
<CustomObject>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Name__c</fullName>
        <label>Metric Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter_First_Date__c</fullName>
        <label>Quarter First Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Gumutindo Quarterly Targets</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GQT-{0000}</displayFormat>
        <label>Gumutindo Quarterly Targets Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gumutindo Quarterly Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>